--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,24 +1,27 @@
-<h2 class="text-lg font-semibold mb-4">Reply</h2>
+<turbo-frame id="reply_form_<%= @comment.parent_id %>">
 
-<%= form_with(model: [@pin, @comment], local: true) do |form| %>
-  <%= form.hidden_field :parent_id, value: params[:parent_id] %>
+  <h2 class="text-lg font-semibold mb-4">Reply</h2>
 
-  <!--  ENABLE MENTIONS -->
-  <div class="relative w-full" data-controller="mentions">
-    <%= form.text_area :content,
-        rows: 4,
-        class: "w-full border p-2 rounded",
-        data: {
-          action: "input->mentions#search",
-          mentions_target: "input"
-        } %>
+  <%= form_with(model: [@pin, @comment], data: { turbo_stream: true }) do |form| %>
+    <%= form.hidden_field :parent_id, value: params[:parent_id] || @comment.parent_id %>
 
-    <div data-mentions-target="dropdown"
-         class="absolute left-0 top-full mt-1 w-full bg-white border rounded-lg shadow hidden z-50">
+    <div class="relative w-full" data-controller="mentions">
+      <%= form.text_area :content,
+          rows: 4,
+          class: "w-full border p-2 rounded",
+          data: {
+            action: "input->mentions#search",
+            mentions_target: "input"
+          } %>
+
+      <div data-mentions-target="dropdown"
+           class="absolute left-0 top-full mt-1 w-full bg-white border rounded-lg shadow hidden z-50">
+      </div>
     </div>
-  </div>
 
-  <div class="mt-3">
-    <%= form.submit "Post Reply", class: "bg-black text-white px-4 py-2 rounded" %>
-  </div>
-<% end %>
+    <div class="mt-3">
+      <%= form.submit "Post Reply", class: "bg-black text-white px-4 py-2 rounded" %>
+    </div>
+  <% end %>
+
+</turbo-frame>
