--- a/app/views/pins/_comments.html.erb
+++ b/app/views/pins/_comments.html.erb
@@ -1,30 +1,29 @@
-<div class="space-y-4">
-  <% pin.comments.where(parent_id: nil).where.not(user_id: nil).order(created_at: :asc).each do |comment| %>
-    <%= render partial: "pins/comment", locals: { comment: comment } %>
-  <% end %>
+<% if logged_in? %>
+  <%= form_with model: [pin, Comment.new], data: { turbo_stream: true }, class: "mb-6" do |f| %>
 
-  <% if logged_in? %>
+    <div class="flex space-x-3">
+      <%= user_avatar(current_user, size: 40) %>
 
-    <%= form_with(model: [pin, Comment.new], local: true, class: "mt-4 space-y-2") do |f| %>
-      <div class="relative w-full" data-controller="mentions">
+      <div class="flex-1">
+        <div class="relative w-full" data-controller="mentions">
+          <%= f.text_area :content,
+              rows: 3,
+              placeholder: "Add a comment...",
+              class: "w-full border p-2 rounded",
+              data: { action: "input->mentions#search", mentions_target: "input" } %>
 
-        <%= f.text_area :content,
-            placeholder: "Add a comment...",
-            rows: 2,
-            class: "w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500",
-            data: {
-              action: "input->mentions#search",
-              mentions_target: "input"
-            } %>
+          <div data-mentions-target="dropdown"
+               class="absolute left-0 top-full mt-1 w-full bg-white border rounded-lg shadow hidden z-50"></div>
+        </div>
 
-        <div data-mentions-target="dropdown"
-             class="absolute left-0 top-full mt-1 w-full bg-white border rounded shadow-lg hidden z-50"></div>
-
+        <%= f.submit "Comment",
+            class: "mt-2 px-4 py-2 bg-blue-600 text-white rounded" %>
       </div>
-
-      <%= f.hidden_field :parent_id, value: nil %>
-      <%= f.submit "Comment", class: "px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition" %>
-    <% end %>
+    </div>
 
   <% end %>
-</div>
+<% end %>
+
+<% pin.comments.where(parent_id: nil).order(created_at: :asc).each do |comment| %>
+  <%= render partial: "pins/comment", locals: { comment: comment } %>
+<% end %>
