--- a/app/views/comments/update.turbo_stream.erb
+++ b/app/views/comments/update.turbo_stream.erb
@@ -1,3 +1,13 @@
 <%= turbo_stream.replace "comment-#{@comment.id}" do %>
   <%= render "pins/comment", comment: @comment %>
 <% end %>
+<% if @comment.parent_id.present? %>
+  <%= turbo_stream.replace "replies_for_#{@comment.parent_id}" do %>
+    <% @comment.parent.replies.each do |reply| %>
+      <%= render "pins/comment", comment: reply %>
+    <% end %>
+  <% end %>
+<% end %>
+<%= turbo_stream.replace "comment_count_#{@pin.id}" do %>
+  <%= @pin.comments.where(parent_id: nil).count %>
+<% end %>
