--- a/app/views/comments/create.turbo_stream.erb
+++ b/app/views/comments/create.turbo_stream.erb
@@ -1,7 +1,12 @@
-<%= turbo_stream.replace "pin_comments_#{@pin.id}" do %>
-  <%= render partial: "pins/comments", locals: { pin: @pin } %>
+<% if @comment.parent_id.present? %>
+  <%= turbo_stream.append "replies_for_#{@comment.parent_id}" do %>
+    <%= render "pins/comment", comment: @comment %>
+  <% end %>
+<% else %>
+  <%= turbo_stream.replace "pin_comments_#{@pin.id}" do %>
+    <%= render partial: "pins/comments", locals: { pin: @pin } %>
+  <% end %>
 <% end %>
-
 <%= turbo_stream.replace "comment_count_#{@pin.id}" do %>
   <%= @pin.comments.where(parent_id: nil).count %>
 <% end %>
